--- a/params.yaml
+++ b/params.yaml
@@ -6,4 +6,5 @@ epochs: 15
 patience: 5 # choices=[3, 5, 7, 10]
 optimizer: RAdam # choices=[SGD, Adam, Adamax, AdamW, NAdam, RAdam, RMSProp, auto]
 lr0: 0.01  # learning rate 
-name: 'yolov8s_exp_v0' # experiment name
+name: 'exp' # experiment name
+model: yolov8m.pt # choices=[yolov8n.pt, yolov8s.pt, yolov8m.pt, yolov8l.pt]
