--- a/params.yaml
+++ b/params.yaml
@@ -1,10 +1,10 @@
 pretrained: True
 seed: 0
-imgsz: 1280 # do not change!!!
+imgsz: 320 
 batch: 16
 epochs: 40
 patience: 5 # choices=[3, 5, 7, 10]
 optimizer: AdamW # choices=[SGD, Adam, Adamax, AdamW, NAdam, RAdam, RMSProp, auto]
 lr0: 0.01  # learning rate 
 name: 'exp1' # experiment name
-model: yolov8m.pt # choices=[yolov8n.pt, yolov8s.pt, yolov8m.pt, yolov8l.pt]
+model: yolov8n.pt # choices=[yolov8n.pt, yolov8s.pt, yolov8m.pt, yolov8l.pt]
